--- a/org.jrebirth.af/core/pom.xml
+++ b/org.jrebirth.af/core/pom.xml
@@ -41,7 +41,7 @@
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>8.0.1-SNAPSHOT</version>
-			<optional>true</optional>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- 
