--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>organization</artifactId>
-		<version>2.0.1-SNAPSHOT</version>
+		<version>2.0.1</version>
 	</parent>
 
 	<groupId>org.jrebirth</groupId>
@@ -21,12 +21,12 @@
 	<inceptionYear>2011</inceptionYear>
 
 	<properties>
-		<LightningTalk-version>2.0.0-SNAPSHOT</LightningTalk-version>
-		<MasteringTables-version>2.0.0-SNAPSHOT</MasteringTables-version>
-		<Jaf-version>2.0.0-SNAPSHOT</Jaf-version>
-		<Breizhcamp-version>2.0.0-SNAPSHOT</Breizhcamp-version>
-		<EclipseDay-version>2.0.0-SNAPSHOT</EclipseDay-version>
-		<EclipseCON-version>2.0.0-SNAPSHOT</EclipseCON-version>
+		<LightningTalk-version>2.0.0</LightningTalk-version>
+		<MasteringTables-version>2.0.0</MasteringTables-version>
+		<Jaf-version>2.0.0</Jaf-version>
+		<Breizhcamp-version>2.0.0</Breizhcamp-version>
+		<EclipseDay-version>2.0.0</EclipseDay-version>
+		<EclipseCON-version>2.0.0</EclipseCON-version>
 	</properties>
 
 	<modules>
