--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/pom.xml
@@ -82,8 +82,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -116,6 +116,14 @@
 				<artifactId>webstart-maven-plugin</artifactId>
 				<version>1.0-beta-6</version>
 
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>keytool-api-1.7</artifactId>
+						<version>1.4</version>
+					</dependency>
+				</dependencies>
+				
 				<executions>
 					<execution>
 						<phase>verify</phase>
