--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>af</artifactId>
 		<groupId>org.jrebirth</groupId>
-		<version>8.1.0-SNAPSHOT</version>
+		<version>8.0.2-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -52,9 +52,10 @@
 	</modules>
 
 	<build>
-		<finalName>${project.groupId}.${project.artifactId}-${project.version}</finalName>
+
 		<resources>
 			<resource>
+				<filtering>false</filtering>
 				<directory>${basedir}/src/main/java</directory>
 				<includes>
 					<include>**/*.fxml</include>
@@ -83,11 +84,10 @@
 
 		<pluginManagement>
 			<plugins>
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<!-- inherited from root parent pom <version>3.1</version> -->
+					<version>3.1</version>
 					<configuration>
 						<source>1.8</source>
 						<target>1.8</target>
@@ -98,7 +98,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<!-- inherited from root parent pom <version>2.4</version> -->
+					<version>2.4</version>
 
 					<configuration>
 						<archive>
@@ -106,8 +106,6 @@
 								<JavaFX-Version>2.0</JavaFX-Version>
 								<Main-Class>${appClass}</Main-Class>
 								<JavaFX-Application-Class>${appClass}</JavaFX-Application-Class>
-								<!-- <JavaFX-Class-Path> jaxb-api-2.2.1.jar stax-api-1.0-2.jar activation-1.1.jar jaxb-impl-2.2.1.jar presentation-0.7.6-SNAPSHOT.jar core-0.7.6-SNAPSHOT.jar logback-classic-1.0.13.jar logback-core-1.0.13.jar 
-									slf4j-api-1.7.5.jar </JavaFX-Class-Path> -->
 							</manifestEntries>
 
 							<manifest>
@@ -118,14 +116,6 @@
 						</archive>
 					</configuration>
 				</plugin>
-
-				<!--<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jarsigner-plugin</artifactId>
-					<configuration>
-						<skip>true</skip>
-					</configuration>
-				</plugin>-->
 
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -138,13 +128,18 @@
 							<artifactId>keytool-api-1.7</artifactId>
 							<version>1.4</version>
 						</dependency>
+						<dependency>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>webstart-pack200-impl</artifactId>
+							<version>1.0-beta-6</version>
+						</dependency>
 					</dependencies>
 
 					<executions>
 						<execution>
-							<phase>verify</phase>
+							<phase>package</phase>
 							<goals>
-								<goal>jnlp</goal>
+								<goal>jnlp-inline</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -202,7 +197,7 @@
 						<unsignAlreadySignedJars>true</unsignAlreadySignedJars>
 
 						<pack200>
-							<enabled>false</enabled>
+							<enabled>true</enabled>
 						</pack200>
 						<gzip>true</gzip>
 
@@ -214,9 +209,24 @@
 
 				</plugin>
 
+
+				<!-- Project Quality -->
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>2.5</version>
+				</plugin>
+
 			</plugins>
 		</pluginManagement>
 
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ftp</artifactId>
+				<version>2.2</version>
+			</extension>
+		</extensions>
 	</build>
 
 	<dependencies>
@@ -230,13 +240,13 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>preloader</artifactId>
-			<version>8.1.0-SNAPSHOT</version>
+			<version>8.0.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>core</artifactId>
-			<version>8.1.0-SNAPSHOT</version>
+			<version>8.0.2-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
