--- a/org.jrebirth.af/showcase/fxml/pom.xml
+++ b/org.jrebirth.af/showcase/fxml/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.jrebirth.af</groupId>
 		<artifactId>showcase</artifactId>
-		<version>8.0.2</version>
+		<version>8.0.3-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>component</artifactId>
-			<version>8.0.2</version>
+			<version>8.0.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
