--- a/org.jrebirth.af/processor/pom.xml
+++ b/org.jrebirth.af/processor/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.0.2</version>
+		<version>8.0.3-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.jrebirth.af</groupId>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>modular</artifactId>
-			<version>8.0.2</version>
+			<version>8.0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
