--- a/org.jrebirth.af/modular/pom.xml
+++ b/org.jrebirth.af/modular/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.jrebirth</groupId>
 		<artifactId>af</artifactId>
-		<version>8.0.4-SNAPSHOT</version>
+		<version>8.0.4</version>
 	</parent>
 	<groupId>org.jrebirth.af</groupId>
 	<artifactId>modular</artifactId>
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>api</artifactId>
-			<version>8.0.4-SNAPSHOT</version>
+			<version>8.0.4</version>
 		</dependency>
 		
 	</dependencies>
