--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>org.jrebirth</groupId>
 	<artifactId>af</artifactId>
-	<version>8.0.4-SNAPSHOT</version>
+	<version>8.0.4</version>
 
 	<packaging>pom</packaging>
 	<name>JRebirth Application Framework</name>
@@ -97,29 +97,6 @@
 			<organizationUrl>www.jrebirth.org</organizationUrl>
 			<roles>
 				<role>Graphic Designer</role>
-			</roles>
-		</developer>
-		<developer>
-			<id>jr3</id>
-			<name>Rajmahendra Hegde</name>
-			<email>rajmahendra.hegde@jrebirth.org</email>
-			<url>http://twitter.come/rajonjava</url>
-			<organization>JUGChennai</organization>
-			<organizationUrl>http://jugchennai.in</organizationUrl>
-			<roles>
-				<role>JRebirth Developer</role>
-			</roles>
-		</developer>
-
-		<developer>
-			<id>jr4</id>
-			<name>Guruprasad Shenoy</name>
-			<email>guruprasad.shenoy@jrebirth.org</email>
-			<url />
-			<organization>JUGChennai</organization>
-			<organizationUrl>http://jugchennai.in</organizationUrl>
-			<roles>
-				<role>JRebirth Developer</role>
 			</roles>
 		</developer>
 	</developers>
