--- a/org.jrebirth.af/dialog/pom.xml
+++ b/org.jrebirth.af/dialog/pom.xml
@@ -38,6 +38,7 @@
 			<groupId>org.jrebirth.af</groupId>
 			<artifactId>processor</artifactId>
 			<version>8.1.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
