--- a/org.jrebirth.af/processor/pom.xml
+++ b/org.jrebirth.af/processor/pom.xml
@@ -12,6 +12,11 @@
 	<name>Processor</name>
 	<description>Processor used to create Module.xml file</description>
 
+
+	<properties>
+		<roaster.version>2.18.4.Final</roaster.version>
+	</properties>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -24,25 +29,37 @@
 	</build>
 
 	<dependencies>
-	
+
 		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.18.2-GA</version>
-			<type>jar</type>
+			<groupId>org.jboss.forge.roaster</groupId>
+			<artifactId>roaster-api</artifactId>
+			<version>${roaster.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.forge.roaster</groupId>
+			<artifactId>roaster-jdt</artifactId>
+			<version>${roaster.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jrebirth.af</groupId>
-			<artifactId>modular</artifactId>
+			<artifactId>core</artifactId>
 			<version>8.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.velocity</groupId>
-			<artifactId>velocity</artifactId>
-			<version>1.7</version>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-model</artifactId>
+			<version>3.3.9</version>
 		</dependency>
+		
+		<!-- <dependency>
+          <groupId>com.sun</groupId>
+          <artifactId>tools</artifactId>
+          <version>8.0</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency> -->
+        
 	</dependencies>
-
 
 </project>
