--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -165,6 +165,11 @@
 
 					<dependency>
 						<groupId>org.apache.maven.doxia</groupId>
+						<artifactId>doxia-site-renderer</artifactId>
+						<version>1.7.1</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.doxia</groupId>
 						<artifactId>doxia-core</artifactId>
 						<version>1.7</version>
 					</dependency>
