--- a/org.jrebirth.af/pom.xml
+++ b/org.jrebirth.af/pom.xml
@@ -196,6 +196,22 @@
 			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-antrun-plugin</artifactId> <executions> <execution> <id>UML recopy</id> <phase>pre-site</phase> <configuration> <tasks> <copy 
 				todir="${project.build.directory}/site/doc/uml/"> <fileset dir="${basedir}/src/main/uml/*.png" /> </copy> </tasks> </configuration> <goals> <goal>run</goal> </goals> </execution> </executions> </plugin> -->
 
+				<plugin> 
+                <groupId>org.tinyjee.dim</groupId> 
+                <artifactId>doxia-include-macro</artifactId> 
+                <version>1.1</version> 
+                <executions> 
+                    <execution> 
+                        <id>initialize-doxia-include-macro</id> 
+                        <!-- Use "initialize" when the 'site' was not given as 'phase'. -->
+                        <!-- phase>initialize</phase -->
+                        <phase>pre-site</phase> 
+                        <goals> 
+                            <goal>initialize</goal> 
+                        </goals> 
+                    </execution> 
+                </executions> 
+            </plugin> 
 
 			<!-- Project Quality -->
 			<plugin>
