--- a/org.jrebirth.af/showcase/pom.xml
+++ b/org.jrebirth.af/showcase/pom.xml
@@ -52,6 +52,7 @@
 		<module>analyzer</module>
 		<module>undoredo</module>
 		<module>fxml</module>
+		<module>workbench</module>
 	</modules>
 
 	<build>
