--- a/org.jrebirth.af/showcase/demo/pom.xml
+++ b/org.jrebirth.af/showcase/demo/pom.xml
@@ -237,6 +237,11 @@
 			<version>8.5.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jrebirth.af.showcase</groupId>
+			<artifactId>workbench</artifactId>
+			<version>8.5.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
