Add moduleStarterClass property to  jrebirth.properties in archetype module

--- a/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
+++ b/org.jrebirth.af/archetype/src/main/resources/archetype-resources/src/main/resources/jrebirth.properties
@@ -33,6 +33,8 @@ closeRetryDelayOther=1000
 threadPoolSizeRatio=2
 ## This parameter is used to add a prefix to custom wave handler method of JRebirth components. They will be named like this : doMyAction(Wave) after being renamed in camel case.
 waveHandlerPrefix=DO_
+## Module starter class
+moduleStarterClass=${package}.SampleModuleStarter
 ##
 ###################################################################################################
 ###								Application Resource Parameters									###
